--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,12 @@
 {
     "version":2,
     "builds": [
-        { "src" : "*.js" , "use" : "@vercel/node" }
+        { "src" : "db.js" , "use" : "@vercel/node" }
     ],
     "routes" : [
         {
             "src" : "/(.*)",
-            "dest" : "/"
+            "dest" : "/server.js"
         }
     ]
 }
