--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,24 @@
+
 {
-    "version":2,
+    "version": 2,
     "builds": [
-        { 
-            "src" : "server.js" , 
-            "use" : "@vercel/node"
+        {
+            "src": "*.js",
+            "use": "@vercel/node"
         }
     ],
-    "routes" : [
+    "routes": [
         {
-            "src" : "/(.*)",
-            "dest" : "/server.js"
+            "src": "/(.*)",
+            "dest": "/server.js",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "PATCH",
+                "DELETE",
+                "OPTIONS"
+            ]
         }
     ]
 }
